<?xml version="1.0"?>
<package format="2">
  <name>ufogeometry</name>
  <version>1.0.0</version>
  <description>The ufogeometry package</description>

  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/unknownfreeoccupied/ufogeometry</url>

  <buildtool_depend>cmake</buildtool_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
