<?xml version="1.0"?>
<package format="2">
  <name>ufomorton</name>
  <version>1.0.0</version>
  <description>The ufomorton package</description>

  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/danielduberg/ufomorton</url>

  <buildtool_depend>cmake</buildtool_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
