<?xml version="1.0"?>
<package format="2">
  <name>ufotime</name>
  <version>1.0.0</version>
  <description>The ufotime package</description>

  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/unknownfreeoccupied/ufotime</url>

  <buildtool_depend>cmake</buildtool_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
